// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > 'createPet with seed 222' 1`] = `
"/**
 * @description Null response
 */
export function createPets201(): NonNullable<CreatePets201> {
  faker.seed([222])
  return undefined
}

/**
 * @description unexpected error
 */
export function createPetsError(): NonNullable<CreatePetsError> {
  faker.seed([222])
  return error()
}

export function createPetsMutationRequest(): NonNullable<CreatePetsMutationRequest> {
  faker.seed([222])
  return {"name": faker.string.alpha(),"tag": faker.string.alpha()}
}

export function createPetsMutationResponse(): NonNullable<CreatePetsMutationResponse> {
  faker.seed([222])
  return undefined
}"
`;

exports[`OperationGenerator > 'createPet with unknownType any' 1`] = `
"/**
 * @description Null response
 */
export function createPets201(): NonNullable<CreatePets201> {
  
  return undefined
}

/**
 * @description unexpected error
 */
export function createPetsError(): NonNullable<CreatePetsError> {
  
  return error()
}

export function createPetsMutationRequest(): NonNullable<CreatePetsMutationRequest> {
  
  return {"name": faker.string.alpha(),"tag": faker.string.alpha()}
}

export function createPetsMutationResponse(): NonNullable<CreatePetsMutationResponse> {
  
  return undefined
}"
`;

exports[`OperationGenerator > 'createPet' 1`] = `
"/**
 * @description Null response
 */
export function createPets201(): NonNullable<CreatePets201> {
  
  return undefined
}

/**
 * @description unexpected error
 */
export function createPetsError(): NonNullable<CreatePetsError> {
  
  return error()
}

export function createPetsMutationRequest(): NonNullable<CreatePetsMutationRequest> {
  
  return {"name": faker.string.alpha(),"tag": faker.string.alpha()}
}

export function createPetsMutationResponse(): NonNullable<CreatePetsMutationResponse> {
  
  return undefined
}"
`;

exports[`OperationGenerator > 'deletePet' 1`] = `
"export function deletePetsPetidMutationResponse(): NonNullable<DeletePetsPetidMutationResponse> {
  
  return undefined
}"
`;

exports[`OperationGenerator > 'getPets' 1`] = `
"export function listPetsQueryParams(): NonNullable<ListPetsQueryParams> {
  
  return {"limit": faker.string.alpha()}
}

/**
 * @description A paged array of pets
 */
export function listPets200(): NonNullable<ListPets200> {
  
  return pets()
}

/**
 * @description unexpected error
 */
export function listPetsError(): NonNullable<ListPetsError> {
  
  return error()
}

/**
 * @description A paged array of pets
 */
export function listPetsQueryResponse(): NonNullable<ListPetsQueryResponse> {
  
  return pets()
}"
`;

exports[`OperationGenerator > 'showPetById' 1`] = `
"export function showPetByIdPathParams(): NonNullable<ShowPetByIdPathParams> {
  
  return {"petId": faker.string.alpha(),"testId": faker.string.alpha()}
}

/**
 * @description Expected response to a valid request
 */
export function showPetById200(): NonNullable<ShowPetById200> {
  
  return pet()
}

/**
 * @description unexpected error
 */
export function showPetByIdError(): NonNullable<ShowPetByIdError> {
  
  return error()
}

/**
 * @description Expected response to a valid request
 */
export function showPetByIdQueryResponse(): NonNullable<ShowPetByIdQueryResponse> {
  
  return pet()
}"
`;
